<resources>

    <string name="app_name">aview</string>
    
    <string name="hello_world">Featured</string>
    
    <string name="high_profile_menu_item">High Profile</string>
    <string name="base_profile_menu_item">Base Profile</string>
    <string name="low_profile_menu_item">Low Profile</string>
    
    <string name="progressive_streaming_menu_item">Progressive Streaming</string>
    
    <string name="title_activity_video">VideoActivity</string>
    
    <string name="VideoView_error_text_invalid_progressive_playback">Media invalid for Progressive Playback</string>
    <string name="VideoView_error_text_unknown">An error has occurred</string>
    <string name="VideoView_error_button">OK</string>
    
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    
    <string name="title_activity_episodes">EpisodesActivity</string>
    
    <string name="title_activity_settings">Settings</string>
    
    <string name="sliding_menu_item_sections">Main</string>
    <string name="sliding_menu_item_featured">Featured</string>
    <string name="sliding_menu_item_recent">Recent</string>
    <string name="sliding_menu_item_last_chance">Last Chance</string>
    <string name="sliding_menu_item_by_alpha">By Alpha</string>
    <string name="sliding_menu_item_a_f">A - F</string>
    <string name="sliding_menu_item_g_l">G - L</string>
    <string name="sliding_menu_item_m_r">M - R</string>
    <string name="sliding_menu_item_s_z">S - Z</string>
    <string name="sliding_menu_item_0_9">0 - 9</string>
    <string name="sliding_menu_item_by_category">By Category</string>
    <string name="sliding_menu_item_abc4kids">ABC 4 Kids</string>
    <string name="sliding_menu_item_arts">Arts and Culture</string>
    <string name="sliding_menu_item_comedy">Comedy</string>
    <string name="sliding_menu_item_documentary">Documentary</string>
    <string name="sliding_menu_item_drama">Drama</string>
    <string name="sliding_menu_item_education">Education</string>
    <string name="sliding_menu_item_indigenous">Indigenous</string>
    <string name="sliding_menu_item_lifestyle">Lifestyle</string>
    <string name="sliding_menu_item_news">News and Current Affairs</string>
    <string name="sliding_menu_item_panel">Panel and Discussion</string>
    <string name="sliding_menu_item_sport">Sport</string>
    <string name="sliding_menu_item_abc3">ABC 3</string>
    <string name="sliding_menu_item_abc24">ABC News 24</string>
    
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_closed">Drawer Closed</string>
    <string name="no_network_connection_toast">No network connection found</string>

    <!-- Preferences -->
    <string name="pref_hls_settings">HTTP Live Streaming</string>
    <string name="pref_hls">Use HTTP Live Streaming</string>
    <string name="pref_hls_summ_on">Using HTTP Live Streaming, some videos won\'t play fully.</string>
    <string name="pref_hls_summ_off">Using HTTP Progressive streaming.</string>
    <string name="pref_hlsProfile">HTTP Live Streaming Profile</string>
    <string name="pref_hlsProfile_default">LIVE_HIGH</string>
    <string name="pref_about">About</string>
    <string name="pref_oss">Open-source licences</string>
    <string name="pref_oss_summary">Licence details for open source software</string>
    <string name="pref_oss_dialog_title">Open-source licence details</string>
    <string name="pref_oss_dialog_notice">Notices for files:</string>

    <!-- Menu items -->
    <string name="menu_refresh">Refresh</string>
    <string name="menu_search">Search</string>
    <string name="menu_share">Share</string>
    <string name="menu_settings">Settings</string>
    <string name="placeholder">Long Episode Description Text</string>

    <!-- Movie player -->
    <!-- Used to format short video duration in Details dialog. minutes:seconds e.g. 00:30 -->
    <string name="details_ms">%1$02d:%2$02d</string>
    <!-- Used to format video duration in Details dialog. hours:minutes:seconds e.g. 0:21:30 -->
    <string name="details_hms">%1$d:%2$02d:%3$02d</string>

    <!-- Movie View Resume Playing dialog title -->
    <string name="resume_playing_title">Resume video</string>
    <!-- Movie View Start Playing dialog title -->
    <string name="resume_playing_message">Resume playing from %s ?</string>
    <!-- Movie View Start Playing button "Resume from bookmark" -->
    <string name="resume_playing_resume">Resume playing</string>
    <!-- Movie View Start Playing button "Beginning" -->
    <string name="resume_playing_restart">Start over</string>
    <!-- shown in the video player view while the video is being loaded, before it starts playing -->
    <string name="loading_video">Loading video\u2026</string>

</resources>